<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/hello_app" />
    
    <ImageView
        android:id="@+id/imageView1"
        android:contentDescription="@string/ajuda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:src="@drawable/tela_inicial" />

    <Button
        android:id="@+id/button1"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="@string/jogar" />

    <Button
        android:id="@+id/button2"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/ranking" />

    <Button
        android:id="@+id/button3"
        android:layout_width="186dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/opcoes" />

    <Button
        android:id="@+id/button4"
        android:layout_width="166dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/ajuda" />

    <Button
        android:id="@+id/button5"
        android:layout_width="124dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/sair" />
    

</LinearLayout>